feat(api): implementa rota que cria usuario e realiza configuracoes de DI

--- a/Services/user-manager/UserManager.Application/UserManager.Application.csproj
+++ b/Services/user-manager/UserManager.Application/UserManager.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\UserManager.Domain\UserManager.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flunt" Version="2.0.5" />
+  </ItemGroup>
+
 </Project>
