chore: injeta dependencia para realizar a persistencia atraves do ef

--- a/Services/user-manager/UserManager.Api/appsettings.json
+++ b/Services/user-manager/UserManager.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=UserManager;User Id=sa;Password=123456;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
