--- a/Services/user-manager/UserManager.Application/UserManager.Application.csproj
+++ b/Services/user-manager/UserManager.Application/UserManager.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flunt" Version="2.0.5" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
 </Project>
