--- a/Services/user-manager/UserManager.Application/UserManager.Application.csproj
+++ b/Services/user-manager/UserManager.Application/UserManager.Application.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
     <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
