feat: realiza configuracao das migrations e altera banco para postgressql

--- a/Services/user-manager/UserManager.Api/appsettings.json
+++ b/Services/user-manager/UserManager.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=UserManager;User Id=sa;Password=123456;Encrypt=False;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=UserManager;Username=postgres;Password=postgres123"
   },
   "Logging": {
     "LogLevel": {
