--- a/Services/user-manager/UserManager.Api/appsettings.Development.json
+++ b/Services/user-manager/UserManager.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=UserManager_Dev;Username=postgres;Password=postgres123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
