--- a/Services/AuthService/AuthService.Infrastructure/AuthService.Infrastructure.csproj
+++ b/Services/AuthService/AuthService.Infrastructure/AuthService.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthService.Domain\AuthService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
