feat: implementar persistência de ApiKey com EF Core e PostgreSQL

--- a/Services/AuthService/AuthService.Api/appsettings.Development.json
+++ b/Services/AuthService/AuthService.Api/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthService_Dev;Username=postgres;Password=postgres123"
+  },
+  "Jwt": {
+    "SecretKey": "dev-super-secret-key-minimum-32-characters-long-for-hmac-sha256",
+    "Issuer": "AuthService",
+    "Audience": "AuthService",
+    "ExpirationMinutes": "60"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
