--- a/Services/AuthService/AuthService.Infrastructure/AuthService.Infrastructure.csproj
+++ b/Services/AuthService/AuthService.Infrastructure/AuthService.Infrastructure.csproj
@@ -7,10 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Persistence\Migrations\" />
-	</ItemGroup>
-
-	<ItemGroup>
+		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
