fix: ajusta swaggerExtension e remove conflitos entre pacotes

--- a/Services/AuthService/AuthService.Api/appsettings.json
+++ b/Services/AuthService/AuthService.Api/appsettings.json
@@ -8,6 +8,10 @@
     "Audience": "AuthService",
     "ExpirationMinutes": "60"
   },
+  "Bootstrap": {
+    "AdminEmail": "admin@authservice.com",
+    "AdminPassword": "Admin@123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
