--- a/Services/AuthService/AuthService.Api/appsettings.json
+++ b/Services/AuthService/AuthService.Api/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthService;Username=postgres;Password=postgres123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthService;Username=postgres;Password=postgres123",
+    "Redis": "localhost:6379,abortConnect=false"
+  },
+  "Redis": {
+    "CacheDurationMinutes": 5
   },
   "Jwt": {
     "SecretKey": "your-super-secret-key-minimum-32-characters-long-for-hmac-sha256",
