feat: comeca ajuste do redis para realizar cache corretamente

--- a/Services/AuthService/AuthService.Api/appsettings.json
+++ b/Services/AuthService/AuthService.Api/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=AuthService;Username=postgres;Password=postgres123",
-    "Redis": "localhost:6379,abortConnect=false"
   },
   "Redis": {
-    "CacheDurationMinutes": 5
+    "CacheDurationMinutes": 10,
+    "ConnectionString": "localhost:6379,abortConnect=false"
   },
   "Jwt": {
     "SecretKey": "your-super-secret-key-minimum-32-characters-long-for-hmac-sha256",
