--- a/Services/AuditService/AuditService.Api/AuditService.Api.csproj
+++ b/Services/AuditService/AuditService.Api/AuditService.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuditService.Application\AuditService.Application.csproj" />
+    <ProjectReference Include="..\AuditService.Infrastructure\AuditService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
