--- a/Services/AuditService/AuditService.Infrastructure/AuditService.Infrastructure.csproj
+++ b/Services/AuditService/AuditService.Infrastructure/AuditService.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuditService.Application\AuditService.Application.csproj" />
+  </ItemGroup>
+
 </Project>
