--- a/Services/AuditService/AuditService.Api/AuditService.Api.csproj
+++ b/Services/AuditService/AuditService.Api/AuditService.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\AuditService.Infrastructure\AuditService.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
