--- a/Services/AuditService/AuditService.Infrastructure/AuditService.Infrastructure.csproj
+++ b/Services/AuditService/AuditService.Infrastructure/AuditService.Infrastructure.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\AuditService.Application\AuditService.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.2" />
+    <PackageReference Include="MongoDB.Driver" Version="3.6.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
+  </ItemGroup>
+
 </Project>
