--- a/Services/AuditService/AuditService.Api/Properties/launchSettings.json
+++ b/Services/AuditService/AuditService.Api/Properties/launchSettings.json
@@ -1,11 +1,10 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5268",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:7175",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -13,8 +12,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7143;http://localhost:5268",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7175;http://localhost:7176",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
